# CW_1

./: .env_template  .gitignore  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt
data/: vacancies.json
src/: API.py  constructor.py  filter.py  main.py  reports.py  saver.py  services.py  utils.py  views.py
tests/: test_main.py  test_reports.py  test_services.py  test_utils.py  test_views.py
