[project]
name = "cw_1"
version = "0.1.0"
description = ""
authors = [
    {name = "Denis",email = "bekishev.denis@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pip (>=25.0.1,<25.1.0)",
    "pytest (>=8.3.5,<8.4.0)",
    "typing-extensions (>=4.13.0,<4.14.0)",
    "mypy (>=1.15.0,<1.16.0)",
    "click (>=8.1.8,<8.2.0)",
    "openpyxl (>=3.1.5,<3.2.0)",
    "flake8 (>=7.2.0,<8.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.flake8]
max-line-length = 119
ignore = "E203, E266, E501, W503"
exclude = ".git, __pycache__, venv, .venv"


[tool.black]
line-length = 119
exclude = '''
/(
    \.git
    | \.venv
)/
'''

[tool.isort]
line_length = 119